Added menu options to select movie categories.
Allow your user to change sort order via a setting:
The sort order can be by most popular, or by top rated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Popular Movies</string>
     <string name="not_available">Not Available</string>
     <string name="movie_image">Movie Image</string>
+    <string name="most_popular_movies">Most Popular Movies</string>
+    <string name="top_movies">Top Movies</string>
 </resources>
