--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,13 @@
 <resources>
     <string name="app_name">Popular Movies</string>
     <string name="not_available">Not Available</string>
+    <string name="not_rated">Not Rated</string>
     <string name="movie_image">Movie Image</string>
     <string name="most_popular_movies">Most Popular Movies</string>
     <string name="top_movies">Top Movies</string>
+    <string name="no_data">Data is not available</string>
+    <string name="movie_poster">Movie Poster</string>
+    <string name="release_year">Release Year</string>
+    <string name="rating">Rating</string>
+    <string name="movie_overview">Movie Overview</string>
 </resources>
