--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="release_year">Release Year</string>
     <string name="rating">Rating</string>
     <string name="movie_overview">Movie Overview</string>
+    <string name="error_loading_movies">Loading Movies</string>
 </resources>
